--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ body {
   border-radius: 7px;
   box-shadow: 0px 2px 8px rgb(88, 88, 88);
   padding: 10px 20px;
+  margin-bottom: 50px;
 }
 
 .card .tag {
@@ -99,6 +100,10 @@ body {
   position: absolute;
   top: -5px;
   left: 5px;
+}
+
+.hide-lines .rv-xy-plot__axis__tick__line {
+  display: none;
 }
 
 /* .line-chart-legend.crimson .rv-discrete-color-legend-item__color:before {
